--- a/dotnet5todoapp/appsettings.json
+++ b/dotnet5todoapp/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDBSettings": {
+    "Host": "localhost",
+    "Port": "27017",
+    "Username": "root",
+    "Password": "password"
+  }
 }
