learned postgresql basics in dotnetcore 5

--- a/dotnet5todoapp/appsettings.json
+++ b/dotnet5todoapp/appsettings.json
@@ -12,5 +12,12 @@
     "Port": "27017",
     "Username": "root",
     "Password": "password"
+  },
+  "PostgresDBSettings": {
+    "Host": "localhost",
+    "Port": "5432",
+    "Database": "todos",
+    "Username": "postgres",
+    "Password": "password"
   }
 }
